--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,6 +131,7 @@ Global stylesheet
 @import "partials/modules/deal-main";
 @import "partials/modules/filters";
 @import "partials/modules/drop-down-menu";
+@import "partials/modules/storefront-storelist-phone-map-links";
 @import "partials/modules/stores-list";
 @import "partials/modules/storefront";
 @import "partials/modules/stores-maps";
