Create a meta model, and added page titles to that.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	<!-- //Prefetch DNS for external assets -->
 
 	<!-- Title -->
-	<title><%= page_title %> | Westfield</title>
+	<title><%= meta.page_title %></title>
 	<!-- //Title -->
 
 	<%= render "shared/stylesheets_global" %>
