--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -16,7 +16,7 @@
       </li><!--
       -->
       <li>
-        <%= render "/shared/social_share", url: current_url, title: page_title, image: page_image %>
+        <% render "/shared/social_share", url: current_url, title: meta.title, image: meta.image %>
       </li>
     </ul>
 
