Removing text from product tile icon

--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -6,7 +6,7 @@
 <div class="tile__meta">
   <span class="tile__meta__icon">
     <span class="icon icon--products" aria-hidden="true"></span>
-    <span class="hide-visually">Product</span>
+    <span class="hide-visually"></span>
   </span>
   <div class="tile__meta__inner">
     <h3 class="tile__meta__hdr"><%= result.name %></h3>
