--- a/app/assets/stylesheets/partials/layout/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/layout/_nav-contextual.scss
@@ -2,10 +2,17 @@
   Contextual navigation
 */
 .nav-contextual {
+  // Added when left hand navigation was removed
+  .container{@include clear-fix;}
+
   position: relative;
   background-color: $color-med-txt;
 
-  a:hover {color:#fff;}
+  a {
+    color: $color-light-txt;
+
+    &:hover {color:#fff;}
+  }
 
   /* Scroll the contents of the navigation when the viewport is narrow enough */
   nav {
@@ -47,10 +54,9 @@
   .nav-contextual__show-more {
     @include respond-min($palm) {display: none;}
 
-    position: absolute;
+    float: right;
     @include to-rem(top, 7); // half height
     @include to-rem(padding-left, $spacing-base);
-    right: 0;
     color: $color-light-txt;
     @include linear-gradient(#f63, #ff6, top left, top right);
     background: -webkit-linear-gradient(left, rgba($color-med-txt, 0) 0%, rgba($color-med-txt, 1) 100%);
@@ -58,42 +64,39 @@
 
 // Centre selector / nearest centre
 .nav-contextual__centre-selector {
-  @include respond-max($palm) {border-top: 1px solid $color-light-txt;}
+  // Added when left hand navigation was removed
+  width: 100%;
+  @include to-rem(padding-top padding-bottom, $spacing-half);
+  // End Added when left hand navigation was removed
+
+  float: left;
+
   @include respond-min($non-palm) {
-    position: absolute;
-    top:0;
-    right:0;
-    width: 100%;
-    @include to-rem(padding-top padding-bottom, $spacing-half);
-
+    float: right;
     text-align: right;
-    label { display:inline-block; vertical-align: bottom; }
-    select {display: inline-block;}
+    @include to-rem(padding-top padding-bottom, $spacing-half + $spacing-quarter);
   }
 
-  button {
-    position: absolute;
-    @include to-rem(top, $spacing-third);
-    @include to-rem(right, $spacing-half);
+  label,
+  .select  {
+    display: inline-block;
+    vertical-align: bottom;
   }
 
-  @include respond-max($palm) {
-    .nav-contextual__centre-selector-control {display:none;}
+  // Hide/show button only visible on mobile
+  button {float: right;}
+}
+
+  .nav-contextual__centre-selector-control {
+    @include respond-max($palm) {
+      display: none;
+      float: left;
+      width: 80%;
+    }
+
+    @include font-size($font-size-sml);
+    color: $color-light-txt;
+
+    // Space the select away from the label
+    label {@include to-rem(margin-right, $spacing-base);}
   }
-}
-
-.nav-contextual__centre-selector-control {
-  @include font-size($font-size-sml);
-  @include to-rem(padding-top padding-bottom, $spacing-third);
-  color: $color-light-txt;
-
-  label {@include to-rem(margin-right, $spacing-base);}
-}
-
-.nav-contextual__centre-selector__group {
-  @include to-rem(margin-bottom, $spacing-quarter);
-  background-color: $color-grey-3;
-  border-radius: $border-radius;
-
-  &:last-child {margin-bottom: 0;}
-}
