--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -13,7 +13,7 @@
 
       <div class="container">
 
-        <h2 class="stores-maps__hdr">Stores A-Z</h2>
+        <h2 class="stores-maps__filters-toggle__hdr">Stores A-Z</h2>
 
         <%# Filters %>
         <%# [CHRIS TODO] need to add `aria-owns` to the 'Apply' button that points to the filters count %>
