--- a/app/assets/stylesheets/partials/buttons/_base.scss
+++ b/app/assets/stylesheets/partials/buttons/_base.scss
@@ -77,6 +77,9 @@
 				top: 28%;
 			}
 		}
+
+		/* Truncate */
+		.txt-truncate {display: block;}
 	}
 
 	/* As above but position icon over to the far left */
