--- a/app/assets/stylesheets/partials/modules/_pill.scss
+++ b/app/assets/stylesheets/partials/modules/_pill.scss
@@ -14,7 +14,7 @@
   @include to-rem(padding, $spacing-quarter);
   border-radius: $border-radius;
   background-color: #fff;
-  box-shadow: 0 1px 2px rgba(#000, 0.25);
+  box-shadow: $box-shadow;
 }
 
 /* Apply spacing both sides */
