--- a/app/assets/stylesheets/partials/utils/_mixins.scss
+++ b/app/assets/stylesheets/partials/utils/_mixins.scss
@@ -976,7 +976,7 @@
 /* Default */
 @mixin box {
   background-color: #fff;
-  box-shadow: 0 1px 2px rgba(#000, 0.25);
+  box-shadow: $box-shadow;
 }
 
 /* Heavy */
