--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -352,5 +352,8 @@ $z-index-high: 2147483640 !default;
 
 $z-index-max: 2147483647 !default;
 
-/* Border radius */
+/* Common border radius */
 $border-radius: 3px !default;
+
+/* Common box shadow */
+$box-shadow: 0 1px 2px rgba(#000, 0.25) !default;
